[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ARC-9" 
version = "1.0.2"
description = "Advanced DNA Mutagen Encryption Protocol"
readme = "README.md"
authors = [{name = "Elevate", email = "elevate397@gmail.com"}]
keywords = ["encryption", "crypto", "mutagen", "dna", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography"
]
dependencies = []